src/test/deca/syntax/valid/test20_ifelse.deca
// Description:
//    Programme testant les if then else.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//	  Hello 1	(pas sur, cf (1))
//	  Hello 2
//	  Hello 3
//	  Hello 4
//
// Historique:
//    cree le 12/01/2020

{
	if(2==2){
		println("Hello 2");
	}
	
	if(2>3){
		println("FAUX 1");
	} else if(1==1)
	{println("Hello 3");}
	
	if(2>3)
	{println("FAUX 2");}
	else
	{println("Hello 4");}
}